# random-data-analysis

./: .gitignore  LICENSE  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml
docs/: api.md  index.md
src/data_analytics/: __init__.py  column_statistics.py
test/: test_column_statistics.py
